# subnet-synthesizing

./: Dockerfile  pyproject.toml
condenses_synthesizing/: client.py  config.py  server.py
